<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FitnessApp</string>
    <string name="title_home">Strona główna</string>
    <string name="title_products">Produkty</string>
    <string name="title_meals">Posiłki</string>
    <string name="author">Author:</string>
    <string name="publication_date">Data publikacji:</string>
    <string name="enter_name">Imię i nazwisko</string>
    <string name="enter_comment">Treść komentarza</string>
    <string name="add_comment">Dodaj komentarz</string>
    <string name="other_comments">Pozostałe komentarze</string>
    <string name="error">Nie udało się połączyć z API. Spróbuj ponownie później</string>

    <string name="product_name">Nazwa produktu</string>
    <string name="product_category">Kategoria produktu</string>
    <string name="product_manufacturer">Producent produktu</string>
    <string name="product_unit">Jednostka miary</string>
    <string name="calories_amount">Ilość kalorii w 100g</string>
    <string name="protein_amount">Ilość białka w 100g</string>
    <string name="carbohydrates_amount">Ilość węglowodanów w 100g</string>
    <string name="fat_amount">Ilość tłuszczy w 100g</string>

    <string name="header_add">Dodaj produkt</string>
    <string name="header_edit">Edytuj produkt</string>

    <string name="product_name_label">Nazwa: %1$s</string>
    <string name="product_category_label">Kategorie: %1$s</string>
    <string name="product_manufacturer_label">Producent: %1$s</string>
    <string name="product_unit_label">Jednostka: %1$s</string>
    <string name="product_protein_label">Ilość białka w 100 g: %1$s g</string>
    <string name="product_carbohydrates_label">Ilość węglowodanów w 100 g: %1$s g</string>
    <string name="product_fat_label">Ilość tłuszczy w 100 g: %1$s g</string>
    <string name="product_calorific_label">Wartość odżywcza w 100 g: %1$s kcal</string>

    <string name="product_details_header">Szczegóły produktu</string>
    <string name="general_data_header">Dane ogólne</string>
    <string name="nutri_value_header">Wartości odżywcze</string>

    <string name="add_product_buton">Dodaj produkt</string>
    <string name="save_edit_product_button">Zapisz produkt</string>

    <string name="product_added_succesful">Pomyślnie dodano produkt do listy</string>

    <string name="product_delete_question">Czy napewno chcesz usunąć ten produkt?</string>
    <string name="formatted_product_info">Producent: %1$s\nNazwa: %2$s</string>

    <string name="product_deleted">Pomyślnie usunięto produkt</string>
    <string name="product_modified">Pomyślnie zmodyfikowano produkt</string>
    <string name="empty_not_saved">Produkt nie został zapisany ponieważ w formularzu były puste pola</string>


    <string name="yes_button">TAK</string>
    <string name="no_button">NIE</string>
    <string name="confirm_button">Zatwierdź</string>
    <string name="cancel_button">Anuluj</string>
    <string name="clear_button">Wyczyść</string>

    <string name="category_dialog_header">Wybierz kategorię</string>

    <string name="required_error">Pole jest wymagane</string>

    <string name="add_manufacturer">Dodaj producenta</string>
    <string name="add_category">Dodaj kategorię</string>

    <string name="add_string">Dodaj</string>

    <string name="manufacturer_name">Nazwa producenta</string>
    <string name="category_name">Nazwa produktu</string>


    <string name="left_arrow">&#x2190;</string>
    <string name="right_arrow">&#x2192;</string>

    <string name="breakfast">Śniadanie</string>
    <string name="second_breakfast">Drugie śniadanie</string>
    <string name="lunch">Obiad</string>
    <string name="tea">Podwieczorek</string>
    <string name="dinner">Kolacja</string>
    <string name="snack">Przekąska</string>

    <string name="total_calorific">Łączne ilość kalorii: %1$s kcal</string>
    <string name="total_protein">Łączne ilość białka: %1$s g</string>
    <string name="total_carbohydrates">Łączne ilość węglowodanów: %1$s g</string>
    <string name="total_fat">Łączne ilość tłuszczy: %1$s g</string>\

    <string name="meal_category">Kategoria posiłku</string>
    <string name="search_products">Szukaj produktu po nazwie</string>

    <string name="add_meal">Dodaj posiłek</string>
    <string name="edit_meal">Edytuj posiłek</string>
    <string name="meal_added_succesful">Pomyślnie dodano posiłek do listy!</string>
    <string name="meal_modified_succesful">Pomyślnie zmodyfikowano posiłek z listy!</string>
    <string name="empty_not_saved_meal">Posiłek nie został zapisany ponieważ w formularzu były puste pola</string>

    <string name="meal_delete_question">Czy napewno chcesz usunąć %1$s z dnia: %2$s ?</string>
    <string name="meal_deleted">Pomyślnie usunięto posiłek</string>
    <string name="meal_details">Szczegóły posiłku</string>
    <string name="included_products">Produkty wchodzące w skład</string>
    <string name="meal_details_summary">Podsumowanie posiłku</string>

    <string name="meal_category_name">Kategoria: %1$s</string>
    <string name="meal_date">Data: %1$s</string>


    <string name="product_list_empty">Wybierz conajmniej jeden produkt z listy</string>

    <string name="distance">Odległość: %.2f metrów</string>
    <string name="caloriesBurned">Spalone kalorie: %.2f kcal</string>
    <string name="stepCounter">Licznik kroków</string>
    <string name="steps">Kroki</string>
    <string name="goal">Cel: 8000</string>
    <string name="not_counter">Serwis liczenia kroków</string>
    <string name="not_counter_working">Liczenie kroków działa w tle</string>
    <string name="steps_done">Zrobione kroki: </string>
    <string name="asc">Aktualna liczba kroków</string>

    <string name="add_limit">Dodaj limit</string>
    <string name="edit_limit">Edytuj limit</string>
    <string name="save_edit_limit_button">Zapisz limit</string>
    <string name="caloric_limit">Limit kaloryczny</string>

    <string name="limit_text">Limit kaloryczny: %1$s</string>
    <string name="calories_text">Spożyte kalorie: %1$s</string>
    <string name="limit_exceeded">Przekroczono limit kaloryczny!</string>
    <string name="add_meal_button">Dodaj posiłek</string>
    <string name="limit_empty">Nie ustawiono limitu</string>
    <string name="bmi_calculator">Kalkulator BMI</string>

    <string name="body_weight">Masa ciała (kg)</string>
    <string name="height">Wzrost (m)</string>
    <string name="calculate_BMI">Oblicz swoje BMI</string>

    <string name="table_category">Kategoria</string>
    <string name="bmi">BMI</string>
    <string name="starvation">Wygłodzenie</string>
    <string name="emaciation">Wychudzenie</string>
    <string name="underweight">Niedowaga</string>
    <string name="correct">Prawidłowe</string>
    <string name="overweight">Nadwaga</string>
    <string name="first_degree_obesity">Otyłość I stopnia</string>
    <string name="second_degree_obesity">Otyłość II stopnia</string>
    <string name="third_degree_obesity">Otyłość III stopnia</string>
    <string name="your_bmi">Twoje BMI wynosi: %1$s</string>
    <string name="notification_info">Ustalony limit wynosi %1$s kcal, natomiast łączna ilość kalori z posiłków wyniosła %2$s kcal</string>
    <string name="delete_comment">Czy napewno chcesz usunąć komentarz autorstwa %1$s ?</string>
</resources>