<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_products" />

    <item
        android:id="@+id/navigation_meals"
        android:icon="@drawable/dining_24"
        android:title="@string/title_meals" />
    <item
        android:id="@+id/navigation_stepCounter"
        android:icon="@drawable/baseline_steps_counter"
        android:title="Steps" />

    <item
        android:id="@+id/navigation_bmi_calculator"
        android:icon="@drawable/calculator_24"
        android:title="@string/bmi_calculator" />

</menu>