<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <TextView
        android:id="@+id/stepCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/value_20"
        android:text="@string/stepCounter"
        android:textColor="@color/black"
        android:textSize="@dimen/size_20"/>

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stepCounter"
        android:layout_margin="@dimen/value_20"
        android:text="@string/distance"
        android:textColor="@color/black"
        android:textSize="@dimen/size_20" />

    <TextView
        android:id="@+id/caloriesBurned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/distance"
        android:layout_margin="@dimen/value_20"
        android:text="@string/caloriesBurned"
        android:textColor="@color/black"
        android:textSize="@dimen/size_20" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:background="@drawable/circular_shape"
            android:progressDrawable="@drawable/progress_bar"

            />

        <TextView
            android:id="@+id/steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/size_25"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:paddingTop="120dp"
            android:textSize="@dimen/size_20"
            />
    </RelativeLayout>
</RelativeLayout>