<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    card_view:cardCornerRadius="@dimen/value_6"
    card_view:cardElevation="@dimen/elevation"
    android:layout_marginLeft="@dimen/value_10"
    android:layout_marginRight="@dimen/value_10"
    card_view:cardUseCompatPadding="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_10"
        android:layout_marginBottom="@dimen/value_10"
        >
        <TextView
            android:id="@+id/meal_category"
            android:gravity="center"
            android:textSize="26sp"
            android:textStyle="bold"
            android:text="@string/breakfast"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="@dimen/value_10"
            android:layout_marginLeft="@dimen/value_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/meal_calorific"
            android:text="@string/total_calorific"
            android:textSize="@dimen/size_20"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="@dimen/value_10"
            android:layout_marginLeft="@dimen/value_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/meal_protein"
            android:text="@string/total_protein"
            android:textSize="@dimen/size_20"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="@dimen/value_10"
            android:layout_marginLeft="@dimen/value_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/meal_carbohydrates"
            android:text="@string/total_carbohydrates"
            android:textSize="@dimen/size_20"
            android:layout_marginRight="@dimen/value_10"
            android:layout_marginLeft="@dimen/value_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/meal_fat"
            android:text="@string/total_fat"
            android:textSize="@dimen/size_20"
            android:layout_marginRight="@dimen/value_10"
            android:layout_marginLeft="@dimen/value_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>