<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/main_edit_add_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        style="@style/second_edit_add_layout">
        <TextView
            android:id="@+id/header_edit_add"
            android:text="Edytuj produkt"
            style="@style/edit_add_text_view"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_product_manufacturer"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:hint="@string/product_manufacturer"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            >
            <AutoCompleteTextView
                android:id="@+id/select_manufacturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_product_category"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:hint="@string/product_category"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            >
            <AutoCompleteTextView
                android:id="@+id/select_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/text_input_product_name"
            android:layout_gravity="center"
            app:endIconMode="clear_text"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:hint="@string/product_name"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_product_unit"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:hint="@string/product_unit"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            >
        <AutoCompleteTextView
            android:id="@+id/select_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/text_input_product_calorificValue"
            android:layout_gravity="center"
            app:endIconMode="clear_text"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:hint="@string/calories_amount"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_product_calorificValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/text_input_product_proteinValue"
            android:layout_gravity="center"
            app:endIconMode="clear_text"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:hint="@string/protein_amount"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_product_proteinValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/text_input_product_carbohydratesValue"
            android:layout_gravity="center"
            app:endIconMode="clear_text"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:hint="@string/carbohydrates_amount"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_product_carbohydratesValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/text_input_product_fatValue"
            android:layout_gravity="center"
            app:endIconMode="clear_text"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:hint="@string/fat_amount"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_product_fatValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_product_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save_edit_product_button">
        </com.google.android.material.button.MaterialButton>

    </LinearLayout>
    </ScrollView>
</LinearLayout>