<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        card_view:cardCornerRadius="@dimen/value_6"
        card_view:cardElevation="@dimen/elevation"
        android:layout_marginLeft="@dimen/value_10"
        android:layout_marginRight="@dimen/value_10"
        android:layout_marginTop="@dimen/value_10"
        android:layout_marginBottom="@dimen/value_10"
        card_view:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/value_20"
                android:layout_marginRight="@dimen/value_20"
                android:layout_marginLeft="@dimen/value_20">
                <TextView
                    android:textSize="@dimen/size_27"
                    android:layout_marginBottom="@dimen/value_10"
                    android:layout_marginRight="@dimen/value_10"
                    android:layout_marginLeft="@dimen/value_10"
                    android:id="@+id/header_edit_add"
                    android:text="@string/add_limit"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    />
                <TextView
                    android:textSize="24sp"
                    android:layout_marginBottom="@dimen/value_15"
                    android:layout_marginRight="@dimen/value_10"
                    android:layout_marginLeft="@dimen/value_10"
                    android:id="@+id/date_textview"
                    android:text="17-01-2024"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/text_input_caloric_limit"
                    android:layout_gravity="center"
                    app:endIconMode="clear_text"
                    android:layout_marginBottom="@dimen/value_10"
                    android:layout_width="match_parent"
                    android:hint="@string/caloric_limit"
                    app:helperText =""
                    app:helperTextTextColor = "@color/red"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_caloric_limit"
                        android:layout_width="match_parent"
                        android:inputType="numberDecimal"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_limit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="40dp"
                    android:text="@string/save_edit_limit_button">
                </com.google.android.material.button.MaterialButton>

            </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>