<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    card_view:cardCornerRadius="@dimen/value_6"
    card_view:cardElevation="@dimen/elevation"
    android:layout_marginLeft="@dimen/value_10"
    android:layout_marginRight="@dimen/value_10"
    card_view:cardUseCompatPadding="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/value_10"
        android:layout_marginRight="@dimen/value_10"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/post_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18.5sp"
            android:layout_marginBottom="@dimen/value_10"
            android:layout_marginTop="@dimen/value_10"
            android:textStyle="bold"

            />
        <TextView
            android:id="@+id/post_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:layout_below="@+id/post_title"
            android:layout_alignStart="@id/post_title"
            />
        <TextView
            android:id="@+id/post_pub_date"
            android:textStyle="italic"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/post_author"
            android:layout_alignStart="@id/post_author"
            />
        <TextView
            android:id="@+id/post_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/post_pub_date"
            android:layout_marginBottom="3dp"
            android:layout_alignStart="@id/post_pub_date"
            />
        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_below="@+id/post_description"
            />
        <TextView
            android:id="@+id/add_comment_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/webView"
            android:text="@string/add_comment"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/text_input_layout_name"
            android:layout_below="@+id/add_comment_text"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:endIconMode="clear_text"
            android:layout_marginBottom="@dimen/value_10"
            android:layout_width="match_parent"
            android:hint="@string/enter_name"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_EditText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/text_input_layout_comment_content"
            android:layout_below="@+id/text_input_layout_name"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            app:endIconMode="clear_text"
            app:counterEnabled="true"
            app:counterMaxLength="200"
            android:hint="@string/enter_comment"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_EditText_comment_content"
                android:maxLength="200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/post_comment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_input_layout_comment_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/add_comment">
        </com.google.android.material.button.MaterialButton>
        <TextView
            android:id="@+id/other_comments_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/post_comment_button"
            android:text="@string/other_comments"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            />
        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/comment_constraint_layout"
            android:layout_width="match_parent"
            android:layout_below="@+id/other_comments_text"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_height="match_parent"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comment_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/comment_list_item"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>